test/fails/bad_casts/functions1.lgl
tag a is vec<2>;
tag b is vec<2>;
tag c is vec<2>;
tag d is vec<2>;

canon `t _collapse<`t : vec<2>>(d v) {
    d->`t m = [[1., 0., 0.], [0., 0., 1.]];
    return v in `t; // we can't use 'in' cause we don't allow it for the abstract `t atm
}

void main() {
    print 1;
}